--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "repository": {
 	"type": "git",
-	"url": "http://github.com/"
+	"url": "https://github.com/Medulli/popular_tweets_tracker"
   }
 }
